[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "fastapi>=0.139.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]
